-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.368 2008-12-11 02:18:36 guru Exp $
-----------------------------------------------------------------------------------------
2008-14-08	pwessel
	* psxyz.c:		Did not pick up y-size for column from input data file.
	* gmt_support.c:	GMT_polygon_is_open did not test for empty polygons (n = 0).
	* grdfilter.c:		New options -Np to honor any NaNs found so output can be NaN,
				-Nr to replace output node with NaN if input node is NaN, and
				-Ni to ignore NaNs [Default].
	
2008-13-08	pwessel
	* grdreformat.c:	Did not initialize grid header structure and could get
				netCDF error "Named variable does not exist in file"
	* grd2cpt.c:		---"---
	* grdedit.c:		---"---
	* grdtrack.c:		---"---
	* grdvector.c:		---"---
	* grdview.c:		---"---
	* grdvolume.c:		---"---
	* mex/grdinfo.c:	---"---
	* mex/grdread.c:	---"---
	
2008-12-08	pwessel
	* gmt_init.c:		-JXh was misinterpreted but -JXv was OK.  Now fixed.
	* gmt_plot.c:		Bug in GMT_fill_polygon that affected polygon outline.
				3D text box was computed incorrectly.
	* gmt_map.c:		Added improved clipping for geographic polygons using
				the Sutherland & Hodgman algorithm when there are no map
				jumps in longitude.  Fixes problem with tiny strips of
				"land" along map perimeter for some projections.
	* gmt_math.h:		Check for macro definitions for system math functions.
	* gmt_vector.c:		GMT_resample_path would add 360 to points along meridians.
	* pslegend.c:		Can now use rectangle among the symbols.
	
2008-12-05	pwessel
	* greenspline.c:	New interpolation/gridding program for 1-3 dimensions using
				Green's functions for various splines.  Added new example 29.

2008-12-03	remko
	* PSL_prologue.ps:	Redefined code for circle. Needed a stroke (S) first, otherwise
				a line would be drawn from the previous symbol.
	* pslib.c:		Updated PSL_prologue.ps version.

2008-11-29	pwessel